package communication;

import "vector_2d.proto";
import "grid_2d.proto";
import "face_array_2d.proto";

message FaceArrayPDU {

    // size of the grid/ data
    optional int32 size_ = 1;

    // message mac grid
    optional Grid mac_grid = 2;

    // message face_velocities
    optional FaceArray face_velocities = 3;
}
